# bitcoin_alert_engine

./: .gitignore  README.md  feature_contracts.yaml  implementation_plan.md  pyproject.toml  real_data_pilot_runbook.md  research_registry.yaml  research_registry_broad_stop_sensitivity.yaml  research_registry_broad_stop_target_sensitivity.yaml  research_registry_broad_test.yaml  research_registry_broad_test_fast_revised_first_signal.yaml  research_registry_broad_test_fast_revised_highest_probability.yaml  research_registry_broad_test_fast_symmetric.yaml  research_registry_broad_test_symmetric.yaml  research_registry_pilot.yaml  research_registry_smoke.yaml  research_registry_smoke_fast_revised_first_signal.yaml  research_registry_smoke_fast_revised_highest_probability.yaml  research_registry_smoke_fast_symmetric.yaml  research_registry_smoke_symmetric.yaml
samples/: macro_events.csv  macro_events_template.csv
scripts/: export_final_alerts.py  export_final_walkforward_alerts.py  postprocess_fast_revised_results.py  render_alert_comparison.py  render_alert_comparison_dashboard.py  render_alert_dashboard.py  render_variant_comparison.py  run_real_data_broad_walkforward.sh  run_real_data_broad_walkforward_fast_revised_first_signal.sh  run_real_data_broad_walkforward_fast_revised_highest_probability.sh  run_real_data_broad_walkforward_fast_symmetric.sh  run_real_data_broad_walkforward_symmetric.sh  run_real_data_core_pilot.sh  run_real_data_core_pilot_checkpoint.sh  run_real_data_fast_revised_suite.sh  run_real_data_long_pilot.sh  run_real_data_pilot.sh  (+5 more)
(+176265 files in other folders)
